--- a/vite-build/index.html
+++ b/vite-build/index.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="./assets/css/index.css">
   </head>
   <body>
+    <div id="pal"></div>
+    <div class="lol"></div>
     <svg id="freehand-canvas"><path /></svg>
 
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./assets/js/main.js"></script>
   </body>
 </html>
