--- a/p5-js-build/index.html
+++ b/p5-js-build/index.html
@@ -6,13 +6,16 @@
 
     <title>Sketch</title>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="./style.css">
 
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
   </head>
 
   <body>
-    <script src="sketch.js"></script>
+    <p id="lines-count"></p>
+
+    <script src="./my-line.js"></script>
+    <script src="./sketch.js"></script>
   </body>
 </html>
