--- a/vite-build/index.html
+++ b/vite-build/index.html
@@ -7,12 +7,11 @@
     
     <!-- styles -->
     <link rel="stylesheet" href="./assets/css/index.css">
-  </head>
-  <body>
-    <div id="pal"></div>
-    <div class="lol"></div>
-    <svg id="freehand-canvas"><path /></svg>
 
-    <script type="module" src="./assets/js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.js"></script>
+  </head>
+
+  <body>
+    <script type="module" src="./sketch.js"></script>
   </body>
 </html>
