--- a/vite-build/index.html
+++ b/vite-build/index.html
@@ -29,6 +29,9 @@
 
       <div class="devider"></div>
       <div id="eraser"></div>
+
+      <div class="devider"></div>
+      <div id="clear"></div>
     </div>
 
     <script type="module" src="./assets/js/main.js"></script>
