--- a/vite-build/index.html
+++ b/vite-build/index.html
@@ -13,18 +13,12 @@
   </head>
 
   <body>
-    <!-- top bar -->
-    <div id="top-bar">
-      <span>airlink</span>
-      <span>menu</span>
-    </div>
-
     <!-- control panel -->
     <div id="control-panel">
       <div id="brush-types"></div>
 
-      <div class="devider"></div>
-      <div id="brush-colors"></div>
+      <!-- <div class="devider"></div>
+      <div id="brush-colors"></div> -->
 
       <div class="devider"></div>
       <div id="brush-sizes"></div>
