Update download function

--- a/vite-build/index.html
+++ b/vite-build/index.html
@@ -28,6 +28,9 @@
 
       <div class="devider"></div>
       <div id="clear"></div>
+
+      <div class="devider"></div>
+      <div id="download"></div>
     </div>
 
     <script type="module" src="./assets/js/main.js"></script>
