Update both client and screen projects

--- a/screen/index.html
+++ b/screen/index.html
@@ -13,18 +13,12 @@
   </head>
 
   <body>
-    <!-- top bar -->
-    <div id="top-bar">
-      <span>airlink</span>
-      <span>menu</span>
-    </div>
-
     <!-- control panel -->
     <div id="control-panel">
       <div id="brush-types"></div>
 
-      <div class="devider"></div>
-      <div id="brush-colors"></div>
+      <!-- <div class="devider"></div>
+      <div id="brush-colors"></div> -->
 
       <div class="devider"></div>
       <div id="brush-sizes"></div>
@@ -34,6 +28,9 @@
 
       <div class="devider"></div>
       <div id="clear"></div>
+
+      <div class="devider"></div>
+      <div id="download"></div>
     </div>
 
     <script type="module" src="./assets/js/main.js"></script>
